--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/cabecalho.css">
     <title>Apeperia</title>
 </head>
 <body>
-   <header>
-    <img src="img/logo-apeperia.svg" alt="">
-    <nav>
+   <header class="cabecalho">
+    <img class="cabecalho__logo" src="img/logo-apeperia.svg" alt="">
+    <nav class="cabecalho__navegacao">
         <ul>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Planos</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Destaques</a></li>
-            <li><a href="#">Institucional</a></li>
-            <li><a href="#">Contato</a></li>
+            <li class="cabecalho__link"><a href="#">Sobre</a></li>
+            <li class="cabecalho__link"><a href="#">Planos</a></li>
+            <li class="cabecalho__link"><a href="#">Blog</a></li>
+            <li class="cabecalho__link"><a href="#">Destaques</a></li>
+            <li class="cabecalho__link"><a href="#">Institucional</a></li>
+            <li class="cabecalho__link"><a href="#">Contato</a></li>
         </ul>
     </nav>
    </header> 
