--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/cabecalho.css">
+    <link rel="stylesheet" href="css/chamada.css">
     <title>Apeperia</title>
 </head>
 <body>
@@ -26,10 +28,10 @@
     </nav>
    </header> 
    <main>
-    <section>
-        <h1>Aplicativos Na Medida</h1>
-        <p>Apeperia tem um jeito inovador de comparar e montar aplicativos para pequenas e médias empresas.</p>
-        <a href="#">Conheça os planos</a>
+    <section class="chamada">
+        <h1 class="chamada__titulo">Aplicativos Na Medida</h1>
+        <p class="chamada__texto">Apeperia tem um jeito inovador de comparar e montar aplicativos para pequenas e médias empresas.</p>
+        <a class="chamada__botao" href="#">Conheça os planos</a>
     </section>
    </main>
 </body>
