--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Apeperia</title>
 </head>
 <body>
-   <header class="cabecalho">
+   <header class="cabecalho container">
     <img class="cabecalho__logo" src="img/logo-apeperia.svg" alt="">
     <nav class="cabecalho__navegacao">
         <ul>
@@ -28,7 +28,7 @@
     </nav>
    </header> 
    <main>
-    <section class="chamada">
+    <section class="chamada container">
         <h1 class="chamada__titulo">Aplicativos Na Medida</h1>
         <p class="chamada__texto">Apeperia tem um jeito inovador de comparar e montar aplicativos para pequenas e médias empresas.</p>
         <a class="chamada__botao" href="#">Conheça os planos</a>
