--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                 <img src="img/dicas-fotografia.png" alt="Painel do post sobre fotografia com celular" class="destaques__painel-imagem">
                 <figcaption class="destaques__painel-texto">Veja dicas de como fotografar usando seu celular</figcaption>
             </figure>
-        </a><a href="#" class="destaques_botao"></a>Receber destaques por email</section>
+        </a>
+        <a href="#" class="destaques_botao botao">Receber destaques por email</a>
+    </section>
    </main>
 </body>
 </html>
