--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <h2 class="item__titulo">Foco</h2>
                 <p class="item__texto">Focamos no empreendimento! Oferecemos serviços de qualidade com preços acessíveis.</p>
             </li>
-            <li class="diferenciais__item">
+            <li class="diferenciais__item diferenciais__item--dinheiro">
                 <h2 class="item__titulo">Especialistas</h2>
                 <p class="item__texto">Equipe experiente e especializada! Testamos todos os produtos antes do lançamento.</p>
             </li>
