--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/chamada.css">
     <link rel="stylesheet" href="css/destaques.css">
     <link rel="stylesheet" href="css/diferenciais.css">
+    <link rel="stylesheet" href="css/sobre.css">
     <title>Apeperia</title>
 </head>
 <body>
@@ -65,6 +66,24 @@
                 <p class="item__texto">Equipe experiente e especializada! Testamos todos os produtos antes do lançamento.</p>
             </li>
         </ul>
+    </section>
+    <section class="sobre container">
+        <div class="sobre__conteudo">
+            <h2 class="sobre__titulo">Sobre</h2>
+            <p class="sobre__texto">Criamos aplicativos personalizados para <strong class="sobre__texto--destaque">todas as pessoas!</strong></p>
+            <p class="sobre__texto">A manutenção de um aplicativo não pode ser um custo extra para o cliente, 
+                Na Apeperia você assina nosso serviço e a manutenção já está inclusa. Assim, 
+                você não se preocupa com manutenção, é tudo por nossa conta.</p>
+            <p class="sobre__texto sobre__texto--destaque">Conte com uma equipe especializada e exclusiva 
+                pra projetos incríveis em qualquer plataforma.</p>
+            <ul class="sobre__plataformas">
+                <li> <img src="img/android.png" alt="Android"> </li>
+                <li> <img src="img/blackberry.png" alt="Blackberry"> </li>
+                <li> <img src="img/apple.png" alt="Apple"> </li>
+                <li> <img src="img/windowsphone.png" alt="windowsphone.png"> </li>
+            </ul>
+            <p class="sobre__texto">Desenvolvemos aplicativos para todas as plataformas</p>
+        </div>
     </section>
    </main>
 </body>
