--- a/index.html
+++ b/index.html
@@ -85,6 +85,42 @@
             <p class="sobre__texto">Desenvolvemos aplicativos para todas as plataformas</p>
         </div>
     </section>
+    <section class="planos">
+        <h2 class="planos__titulo">Planos</h2>
+        <ul class="planos__cartoes">
+            <li class="cartao cartao--start">
+                <h3 class="cartao__titulo">Start</h3>
+                <article class="cartao__conteudo">
+                    <p class="cartao__preco">R$ 500</p>
+                    <p class="cartao__texto">5 manutenções mensais</p>
+                    <p class="cartao__texto">App SEO</p>
+                    <p class="cartao__texto">1 sistema operacional</p>
+                    <a href="" class=" cartao__botao cartao__botao--start">Assinar plano</a>
+                </article>
+            </li>
+            <li class="cartao cartao--ultra">
+                <h3 class="cartao__titulo">Ultra</h3>
+                <article class="cartao__conteudo">
+                    <p class="cartao__preco">R$ 1500</p>
+                    <p class="cartao__texto">20 manutenções mensais</p>
+                    <p class="cartao__texto">App SEO</p>
+                    <p class="cartao__texto">4 sistemas operacionais</p>
+                    <p class="cartao__texto">24h de atendimento</p>
+                    <a href="" class=" cartao__botao cartao__botao--ultra">Assinar plano</a>
+                </article>
+            </li>
+            <li class="cartao cartao--mega">
+                <h3 class="cartao__titulo">Mega</h3>
+                <article class="cartao__conteudo">
+                    <p class="cartao__preco">R$ 1000</p>
+                    <p class="cartao__texto">10 manutenções mensais</p>
+                    <p class="cartao__texto">App SEO</p>
+                    <p class="cartao__texto">2 sistemas operacionais</p>
+                    <a href="" class=" cartao__botao cartao__botao--mega">Assinar plano</a>
+                </article>
+            </li>
+        </ul>
+    </section>
    </main>
 </body>
 </html>
