Estilizando seção de planos

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/destaques.css">
     <link rel="stylesheet" href="css/diferenciais.css">
     <link rel="stylesheet" href="css/sobre.css">
+    <link rel="stylesheet" href="css/planos.css">
     <title>Apeperia</title>
 </head>
 <body>
@@ -95,7 +96,7 @@
                     <p class="cartao__texto">5 manutenções mensais</p>
                     <p class="cartao__texto">App SEO</p>
                     <p class="cartao__texto">1 sistema operacional</p>
-                    <a href="" class=" cartao__botao cartao__botao--start">Assinar plano</a>
+                    <a href="" class="cartao__botao botao cartao__botao--start">Assinar plano</a>
                 </article>
             </li>
             <li class="cartao cartao--ultra">
@@ -106,7 +107,7 @@
                     <p class="cartao__texto">App SEO</p>
                     <p class="cartao__texto">4 sistemas operacionais</p>
                     <p class="cartao__texto">24h de atendimento</p>
-                    <a href="" class=" cartao__botao cartao__botao--ultra">Assinar plano</a>
+                    <a href="" class="cartao__botao botao cartao__botao--ultra">Assinar plano</a>
                 </article>
             </li>
             <li class="cartao cartao--mega">
@@ -116,7 +117,7 @@
                     <p class="cartao__texto">10 manutenções mensais</p>
                     <p class="cartao__texto">App SEO</p>
                     <p class="cartao__texto">2 sistemas operacionais</p>
-                    <a href="" class=" cartao__botao cartao__botao--mega">Assinar plano</a>
+                    <a href="" class="cartao__botao botao cartao__botao--mega">Assinar plano</a>
                 </article>
             </li>
         </ul>
