Adicionando classe container

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <p class="sobre__texto">Desenvolvemos aplicativos para todas as plataformas</p>
         </div>
     </section>
-    <section class="planos">
+    <section class="planos container">
         <h2 class="planos__titulo">Planos</h2>
         <ul class="planos__cartoes">
             <li class="cartao cartao--start">
