--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/diferenciais.css">
     <link rel="stylesheet" href="css/sobre.css">
     <link rel="stylesheet" href="css/planos.css">
+    <link rel="stylesheet" href="css/contato.css">
     <title>Apeperia</title>
 </head>
 <body>
@@ -121,6 +122,26 @@
                 </article>
             </li>
         </ul>
+    </section>
+    <section class="contato container">
+        <h2 class="contato__titulo">Contato</h2>
+        <p class="contato__descricao">Entre em contato com a gente</p>
+        <a href="#" class="contato__botao botao">Entre em contato</a>
+    </section>
+    <section class="institucional container">
+        <h2 class="institucional__titulo">Institucional</h2>
+        <p class="institucional__descricao">Um pouco mais sobre a Apeperia</p>
+        <addrress class="institucional__endereco">
+            Rua Vergueiro, 3185 <br>
+            Vila Mariana, São Paulo
+            <article class="institucional__contato">
+                <p>
+                    <a href="tel:+551155712751" class="institucional__contato-telefone">(11) 5571-2751</a> ou
+                    <a href="mailto:contato@alura.com" class="institucional__contato-email">contato@apeperia.com</a>
+                </p>
+            </article>
+        </addrress>
+        <video src="img/formacao-java.mp4" class="institucional__video" controls></video>
     </section>
    </main>
 </body>
