--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/sobre.css">
     <link rel="stylesheet" href="css/planos.css">
     <link rel="stylesheet" href="css/contato.css">
+    <link rel="stylesheet" href="css/institucional.css">
     <title>Apeperia</title>
 </head>
 <body>
