--- a/index.html
+++ b/index.html
@@ -144,6 +144,21 @@
         </addrress>
         <video src="img/formacao-java.mp4" class="institucional__video" controls></video>
     </section>
+    <section class="rodape">
+        <img class="rodape__social" src="img/logo-apeperia.svg" alt="logo apeperia">
+        <div class="rodape__midia">
+            <a href="#" title="Facebook"><img src="img/facebook.png" alt="Facebook"></a>
+            <a href="#" title="Twitter"><img src="img/twitter.png" alt="Twitter"></a>
+            <a href="#" title="Instagram"><img src="img/instagram.png" alt="Instagram"></a>
+        </div>
+        <ul class="rodape__navegacao">
+            <li class="rodape__link "><a href="#">Sobre</a></li>
+            <li class="rodape__link "><a href="#">Planos</a></li>
+            <li class="rodape__link "><a href="#">Blog</a></li>
+            <li class="rodape__link "><a href="#">Institucional</a></li>
+            <li class="rodape__link "><a href="#">Contato</a></li>
+        </ul>
+    </section>
    </main>
 </body>
 </html>
