Finalizando modelo mobile

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/planos.css">
     <link rel="stylesheet" href="css/contato.css">
     <link rel="stylesheet" href="css/institucional.css">
+    <link rel="stylesheet" href="css/rodape.css">
     <title>Apeperia</title>
 </head>
 <body>
@@ -144,21 +145,28 @@
         </addrress>
         <video src="img/formacao-java.mp4" class="institucional__video" controls></video>
     </section>
-    <section class="rodape">
-        <img class="rodape__social" src="img/logo-apeperia.svg" alt="logo apeperia">
-        <div class="rodape__midia">
-            <a href="#" title="Facebook"><img src="img/facebook.png" alt="Facebook"></a>
-            <a href="#" title="Twitter"><img src="img/twitter.png" alt="Twitter"></a>
-            <a href="#" title="Instagram"><img src="img/instagram.png" alt="Instagram"></a>
-        </div>
+    <footer class="rodape container">
+        <img class="rodape__logo" src="img/logo-apeperia.svg" alt="logo apeperia">
+        <ul class="rodape__social">
+            <li class="rodape__midia">
+                <a href="#" title="Facebook"><img src="img/facebook.png" alt="Facebook"></a>
+            </li>
+            <li class="rodape__midia">
+                <a href="#" title="Twitter"><img src="img/twitter.png" alt="Twitter"></a>
+            </li>
+            <li class="rodape__midia">
+                <a href="#" title="Instagram"><img src="img/instagram.png" alt="Instagram"></a>
+            </li>
+        </ul>
         <ul class="rodape__navegacao">
             <li class="rodape__link "><a href="#">Sobre</a></li>
             <li class="rodape__link "><a href="#">Planos</a></li>
             <li class="rodape__link "><a href="#">Blog</a></li>
+            <li class="rodape__link "><a href="#">Destaque</a></li>
             <li class="rodape__link "><a href="#">Institucional</a></li>
             <li class="rodape__link "><a href="#">Contato</a></li>
         </ul>
-    </section>
+    </footer>
    </main>
 </body>
 </html>
