Ajustando versão desktop seção sobre

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <p class="sobre__texto">A manutenção de um aplicativo não pode ser um custo extra para o cliente, 
                 Na Apeperia você assina nosso serviço e a manutenção já está inclusa. Assim, 
                 você não se preocupa com manutenção, é tudo por nossa conta.</p>
-            <p class="sobre__texto sobre__texto--destaque">Conte com uma equipe especializada e exclusiva 
+            <p class="sobre__texto sobre__texto--destaque sobre__texto--divisao">Conte com uma equipe especializada e exclusiva 
                 pra projetos incríveis em qualquer plataforma.</p>
             <ul class="sobre__plataformas">
                 <li> <img src="img/android.png" alt="Android"> </li>
@@ -88,6 +88,7 @@
             </ul>
             <p class="sobre__texto">Desenvolvemos aplicativos para todas as plataformas</p>
         </div>
+        <img src="img/sobre-apeperia.png" alt="Sobre apeperia" class="sobre__imagem">
     </section>
     <section class="planos container">
         <h2 class="planos__titulo">Planos</h2>
