--- a/index.html
+++ b/index.html
@@ -133,18 +133,22 @@
     </section>
     <section class="institucional container">
         <h2 class="institucional__titulo">Institucional</h2>
-        <p class="institucional__descricao">Um pouco mais sobre a Apeperia</p>
-        <addrress class="institucional__endereco">
-            Rua Vergueiro, 3185 <br>
-            Vila Mariana, São Paulo
-            <article class="institucional__contato">
-                <p>
-                    <a href="tel:+551155712751" class="institucional__contato-telefone">(11) 5571-2751</a> ou
-                    <a href="mailto:contato@alura.com" class="institucional__contato-email">contato@apeperia.com</a>
-                </p>
-            </article>
-        </addrress>
-        <video src="img/formacao-java.mp4" class="institucional__video" controls></video>
+        <div class="instituicional__conteudo">
+            <div class="instituicional__informacoes">
+                <p class="institucional__descricao">Um pouco mais sobre a Apeperia</p>
+                <addrress class="institucional__endereco">
+                    Rua Vergueiro, 3185 <br>
+                    Vila Mariana, São Paulo
+                    <article class="institucional__contato">
+                        <p>
+                            <a href="tel:+551155712751" class="institucional__contato-telefone">(11) 5571-2751</a> ou
+                            <a href="mailto:contato@alura.com" class="institucional__contato-email">contato@apeperia.com</a>
+                        </p>
+                    </article>
+                </addrress>
+            </div>
+            <video src="img/formacao-java.mp4" class="institucional__video" controls></video>
+        </div>
     </section>
     <footer class="rodape container">
         <img class="rodape__logo" src="img/logo-apeperia.svg" alt="logo apeperia">
